objects/nFORCE__Question__c.object
<CustomObject>
    <description>Base object for the questionnaire framework.</description>
    <fields>
        <fullName>nFORCE__Api_Key__c</fullName>
        <description>The field is optional. If populated this value will be included in payloads that are sent to external system</description>
        <label>Api Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Default_Text_Answer__c</fullName>
        <description>This field is optional. The admin manually sets it in the Questionnaire Admin. If populated, when answering a question, the answer will be populated with this value for the Textbox.</description>
        <label>Default Text Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Form_Type__c</fullName>
        <description>This field is required. The admin manually sets it in the Questionnaire Admin. It describes the type of question.</description>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Textarea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and populates automatically. It associates a question to a questionnaire.</description>
        <label>Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required if the question has been archived. It automatically populates and indicates if the question has been archived.</description>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The admin manually populates this field. It indicates if the question is required.</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Label__c</fullName>
        <description>This field is required. The admin manually populates this field. It is the label displayed to the user while viewing a question.</description>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>This field is required. The admin manually populates this field. It is the order of the question in relation to a questionnaire.</description>
        <label>Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Label__c</columns>
        <columns>nFORCE__Is_Archived__c</columns>
        <columns>nFORCE__Form_Type__c</columns>
        <columns>nFORCE__Group__c</columns>
        <columns>nFORCE__Is_Required__c</columns>
        <columns>nFORCE__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>